# git-ai-suggest

./: README.md  pyproject.toml
src/gas/: cli.py
src/gas/templates/: PROMPT_COMMIT.md  PROMPT_PULL_REQUEST.md
