[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-ai-suggest"
version = "0.2.2"
description = "Gemini CLI wrapper for git suggestions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
g = "gas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gas"]
